[tool.poetry]
name = "data-structures-project"
version = "0.1.0"
description = ""
authors = ["kirillskyeng <kirill.netreba@skyeng.ru>"]
readme = "README.md"
packages = [{include = "data_structures_project"}]

[tool.poetry.dependencies]
python = "^3.11"
coverage = "^7.2.7"


[tool.poetry.group.dev.dependencies]
coverage = "^7.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
